--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+/*body, div {*/
+  /*overflow: hidden;*/
+/*}*/
+
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans",
-  /*-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",*/
-    /*"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",*/
-    sans-serif;
+  height: 100vh;
+  width: 100vw;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
