--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -32,8 +32,7 @@
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
     }
-    .NavigationItem a:hover {
-    }
+    .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
         background-color: #8F5C2C;
