--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-/*body, div {*/
-  /*overflow: hidden;*/
-/*}*/
-
 body {
   margin: 0;
   padding: 0;
@@ -10,7 +6,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+div {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.content {
+  height: 100vh;
 }
